--- a/Hospital/Views/Shared/_Layout.cshtml
+++ b/Hospital/Views/Shared/_Layout.cshtml
@@ -27,31 +27,45 @@
                         </li>
 
 
-                        @if (User.Identity.IsAuthenticated)
-                        {
+                        <!-- ... Diğer HTML etiketleri ... -->
 
-                            if(User.IsInRole("admin"))
-                            {
-                                <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Administrator</a>
-                        </li>
-                            }
-                            <li class="nav-item ms-auto">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Profile">@User.FindFirst("Username").Value</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Çıkış Yap</a>
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item ms-auto">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Giriş Yap</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Kayıt Ol</a>
-                            </li>
-                        }
+@if (User.Identity.IsAuthenticated)
+{
+    if(User.IsInRole("admin"))
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Administrator</a>
+        </li>
+    }
+    <li class="nav-item ms-auto">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Profile">@User.FindFirst("Username").Value</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Çıkış Yap</a>
+    </li>
+
+    @if (User.IsInRole("hasta"))
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Appointment" asp-action="MakeAppointment">Randevu Al</a>
+        </li>
+    }
+}
+else
+{
+    <li class="nav-item ms-auto">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Giriş Yap</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Kayıt Ol</a>
+    </li>
+}
+
+<!-- ... Diğer HTML etiketleri ... -->
+
+
+
+
 
 
 
