--- a/Hospital/Views/Appointment/MakeAppointment.cshtml
+++ b/Hospital/Views/Appointment/MakeAppointment.cshtml
@@ -6,10 +6,20 @@
 <div class="row">
     <div class="col-4 offset-4">
         <h1 class="display-10 border-bottom text-center pb-2">@ViewData["Title"]</h1>
-    </div>
+        </div>
 </div>
 
+
+
 <div class="row">
+    <div class="col-4">
+
+        <div class="mb-4">
+            <div asp-validation-summary="All" class="text-danger small"></div>
+        </div>
+
+
+       <div class="row">
     <div class="col-4">
         <div class="mb-4">
             <div asp-validation-summary="All" class="text-danger small"></div>
@@ -23,43 +33,60 @@
                 </div>
             </div>
 
-            <div class="form-group">
+
+                   <!-- Kolay seçim için departman seçimine bir ID ekleyin -->
+<div class="form-group">
     <label class="form-label small">Departman</label>
     <div class="input-group mb-3">
-        <select name="department" class="form-control" onchange="this.form.submit()">
-            @if (ViewData["Departments"] != null)
+        <select id="departmentSelect" name="department" class="form-control">
+            @foreach (var department in (IEnumerable<Department>)ViewData["Departments"])
             {
-                foreach (var department in (IEnumerable<Department>)ViewData["Departments"])
-                {
-                    <option value="@department.Id">@department.Name</option>
-                }
-            }
-            else
-            {
-                <option value="">Departmanlar yüklenemedi</option>
+                <option value="@department.Id">@department.Name</option>
             }
         </select>
     </div>
 </div>
 
+<!-- Doktorları dinamik olarak güncellemek için JavaScript ekleyin -->
+<script>
+    // Departman seçimi değiştiğinde tetiklenen fonksiyon
+    document.getElementById('departmentSelect').addEventListener('change', function () {
+        var departmentId = this.value; // Seçilen departman ID'si
+
+        // Ajax isteği yaparak doktorları getir
+        fetch('/Doctor/GetDoctorsByDepartment?departmentId=' + departmentId)
+            .then(response => response.json())
+            .then(data => {
+                // Doktorları temizle
+                var doctorSelect = document.getElementById('doctorSelect');
+                doctorSelect.innerHTML = '';
+
+                // Yeni doktorları ekle
+                data.forEach(doctor => {
+                    var option = document.createElement('option');
+                    option.value = doctor.id;
+                    option.text = doctor.name + ' ' + doctor.surname;
+                    doctorSelect.add(option);
+                });
+            })
+            .catch(error => console.error('Error:', error));
+    });
+</script>
+
 <div class="form-group">
     <label class="form-label small">Doktor Adı</label>
     <div class="input-group mb-3">
-        <select name="doctorName" class="form-control">
-            @if (ViewData["Doctors"] != null)
-            {
-                foreach (var doctor in (IEnumerable<Doctor>)ViewData["Doctors"])
-                {
-                    <option value="@doctor.Id">@doctor.Name</option>
-                }
-            }
-            else
-            {
-                <option value="">Doktorlar yüklenemedi</option>
-            }
+        <select id="doctorSelect" name="doctorId" class="form-control">
+            <!-- Doktorları buraya ekleyeceğiz -->
         </select>
     </div>
 </div>
+
+
+     
+ 
+
+
 
 
             <div class="form-group">
@@ -80,3 +107,9 @@
         </form>
     </div>
 </div>
+
+
+        
+      
+    </div>
+</div> 
