--- a/Hospital/Views/Admin/AddDoctor.cshtml
+++ b/Hospital/Views/Admin/AddDoctor.cshtml
@@ -1,5 +1,7 @@
 ﻿<!-- Views/Admin/AddDoctor.cshtml -->
 
+
+
 <form method="post" asp-action="AddDoctor">
     <div class="form-group">
         <label for="name">Doktor Adı</label>
@@ -9,6 +11,13 @@
     <div class="form-group">
         <label for="surname">Doktor Soyadı</label>
         <input type="text" name="surname" class="form-control" />
+    </div>
+
+   
+    
+    <div class="form-group">
+        <label for="departmentName">Departman Adı</label>
+        <input type="text" name="departmentName" class="form-control" />
     </div>
 
     <button type="submit" class="btn btn-primary">Doktor Ekle</button>
