--- a/Hospital/Views/Shared/_Layout.cshtml
+++ b/Hospital/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     if(User.IsInRole("admin"))
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">Administrator</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="AddDoctor">Doktor Ekle</a>
         </li>
     }
     <li class="nav-item ms-auto">
