--- a/Hospital/Views/Admin/AddDoctor.cshtml
+++ b/Hospital/Views/Admin/AddDoctor.cshtml
@@ -1,23 +1,65 @@
 ﻿<!-- Views/Admin/AddDoctor.cshtml -->
 
-
+@model Hospital.Models.AddDoctorViewModel
 
 <form method="post" asp-action="AddDoctor">
     <div class="form-group">
         <label for="name">Doktor Adı</label>
-        <input type="text" name="name" class="form-control" />
+        <input type="text" asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="form-group">
         <label for="surname">Doktor Soyadı</label>
-        <input type="text" name="surname" class="form-control" />
+        <input type="text" asp-for="Surname" class="form-control" />
+        <span asp-validation-for="Surname" class="text-danger"></span>
     </div>
 
-   
-    
     <div class="form-group">
-        <label for="departmentName">Departman Adı</label>
-        <input type="text" name="departmentName" class="form-control" />
+        <label for="username">Kullanıcı Adı</label>
+        <input type="text" asp-for="Username" class="form-control" />
+        <span asp-validation-for="Username" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label for="password">Şifre</label>
+        <input type="password" asp-for="Password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+
+   <div class="form-group">
+    <label for="departmentId">Departman</label>
+    <select asp-for="DepartmentId" asp-items="@(new SelectList(ViewBag.Departments, "DeparmentId", "Name"))" class="form-control">
+        <option value="">Departman Seç</option>
+    </select>
+    <span asp-validation-for="DepartmentId" class="text-danger"></span>
+</div>
+
+
+    <div class="form-group">
+        <label for="calismaGunu">Çalışma Günü</label>
+        <select asp-for="CalismaGunu" class="form-control">
+            <option value="Monday">Pazartesi</option>
+            <option value="Tuesday">Salı</option>
+            <option value="Wednesday">Çarşamba</option>
+            <option value="Thursday">Perşembe</option>
+            <option value="Friday">Cuma</option>
+            <option value="Saturday">Cumartesi</option>
+            <option value="Sunday">Pazar</option>
+        </select>
+        <span asp-validation-for="CalismaGunu" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label for="baslangicSaati">Başlangıç Saati</label>
+        <input type="time" asp-for="BaslangicSaati" class="form-control" />
+        <span asp-validation-for="BaslangicSaati" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label for="bitisSaati">Bitiş Saati</label>
+        <input type="time" asp-for="BitisSaati" class="form-control" />
+        <span asp-validation-for="BitisSaati" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Doktor Ekle</button>
