--- a/Hospital/Views/Shared/_Layout.cshtml
+++ b/Hospital/Views/Shared/_Layout.cshtml
@@ -31,20 +31,33 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-    if(User.IsInRole("admin"))
-    {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="AddDoctor">Doktor Ekle</a>
-        </li>
-    }
-    <li class="nav-item ms-auto">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Profile">@User.FindFirst("Username").Value</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Çıkış Yap</a>
-    </li>
+    @if (User.IsInRole("admin"))
+{
+ <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="adminMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        İşlemler
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="adminMenu">
+        <li><a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="Index">Index</a></li>
+        <li><a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="AddDoctor">Doktor Ekle</a></li>
+        <li><a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListDoctors">Doktorları Listele</a></li>
+        <li><a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="EditAppointment">Randevu Düzenle</a></li>
+        <li><a class="dropdown-item" asp-area="" asp-controller="Admin" asp-action="ListUsers">Kullanıcıları Listele</a></li>
+    </ul>
+</li>
 
-    @if (User.IsInRole("hasta"))
+}
+
+<li class="nav-item ms-auto">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Profile">@User.FindFirst("Username").Value</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Çıkış Yap</a>
+</li>
+
+
+
+    @if (User.IsInRole("user"))
     {
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Appointment" asp-action="MakeAppointment">Randevu Al</a>
@@ -59,6 +72,11 @@ else
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Kayıt Ol</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="AddAdmin">Admin Ekkle</a>
+    </li>
+
+    
 }
 
 <!-- ... Diğer HTML etiketleri ... -->
