--- a/Hospital/Views/Admin/AddDoctor.cshtml
+++ b/Hospital/Views/Admin/AddDoctor.cshtml
@@ -38,7 +38,7 @@
 
     <div class="form-group">
         <label for="calismaGunu">Çalışma Günü</label>
-        <select asp-for="CalismaGunu" class="form-control">
+        <select asp-for="CalismaGunu" class="form-control" multiple>
             <option value="Monday">Pazartesi</option>
             <option value="Tuesday">Salı</option>
             <option value="Wednesday">Çarşamba</option>
