--- a/Hospital/Views/Account/Register.cshtml
+++ b/Hospital/Views/Account/Register.cshtml
@@ -14,10 +14,27 @@
         <form method="post">
             <div asp-validation-summary=ModelOnly class="text-danger small"></div>
             <div class="form-group mb-3">
+                <div class="form-group mb-3">
+                <label asp-for=Name class="form-label">Ad</label>
+                <input asp-for=Name class="form-control" placeholder="bburcuaks" />
+                <span asp-validation-for="Name"class="text-danger small"></span>
+            </div>
+               
+            <div class="form-group mb-3">
+                <div class="form-group mb-3">
+                <label asp-for=Surname class="form-label">Soyad</label>
+                <input asp-for=Surname class="form-control" placeholder="bburcuaks" />
+                <span asp-validation-for="Surname"class="text-danger small"></span>
+            </div>
+
+            <div class="form-group mb-3">
+                <div class="form-group mb-3">
                 <label asp-for=Username class="form-label">Kullanıcı Adı</label>
                 <input asp-for=Username class="form-control" placeholder="bburcuaks" />
                 <span asp-validation-for="Username"class="text-danger small"></span>
             </div>
+
+
 
             <div class="form-group mb-3">
                 <label asp-for=Password class="form-label">Şifre</label>
