--- a/Hospital/Views/Admin/ListUsers.cshtml
+++ b/Hospital/Views/Admin/ListUsers.cshtml
@@ -1,5 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using Hospital.Entities
+@model List<User>
+
+<h2>Users List</h2>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Username</th>
+            <th>Password</th>
+            <th>Locked</th>
+            <th>CreatedAt</th>
+            <th>Role</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var user in Model)
+        {
+            <tr>
+                <td>@user.Id</td>
+                <td>@user.Username</td>
+                <td>@user.Password</td>
+                <td>@user.Locked</td>
+                <td>@user.CreatedAt</td>
+                <td>@user.Role</td>
+            </tr>
+        }
+    </tbody>
+</table>
