--- a/Hospital/Views/Shared/_Layout.cshtml
+++ b/Hospital/Views/Shared/_Layout.cshtml
@@ -62,6 +62,12 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Appointment" asp-action="MakeAppointment">Randevu Al</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ListAppointments">Randevularım</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="DeleteAppointments">Randevu Sil</a>
+        </li>
     }
 }
      else
