--- a/Hospital/Views/Account/Login.cshtml
+++ b/Hospital/Views/Account/Login.cshtml
@@ -4,34 +4,34 @@
     ViewData["Title"] = "Giriş Yap";
 }
 
-<div class="row">
+<<div class="row">
     <div class="col-4 offset-4">
         <h1 class="display-10 border-bottom text-center pb-2">@ViewData["Title"]</h1>
-        </div>
+    </div>
 </div>
 
-
- <div class="row">
+<div class="row">
     <div class="col-4 offset-4">
         <form method="post" asp-controller="Account" asp-action="Login">
-            <div asp-validation-summary=ModelOnly class="text-danger small"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger small"></div>
+
             <div class="form-group mb-3">
-                <label asp-for=Username class="form-label">Kullanıcı Adı </label>
-                <input asp-for=Username class="form-control" placeholder="bburcuaks" />
-                <span asp-validation-for="Username"class="text-danger small"></span>
+                <label asp-for="Username" class="form-label">Kullanıcı Adı</label>
+                <input asp-for="Username" class="form-control" placeholder="Kullanıcı Adı" />
+                <span asp-validation-for="Username" class="text-danger small"></span>
             </div>
 
             <div class="form-group mb-3">
-                <label asp-for=Password class="form-label">Şifre</label>
-                <input asp-for=Password class="form-control" placeholder="Şifre" />
-                 <span asp-validation-for="Password"class="text-danger small"></span>
+                <label asp-for="Password" class="form-label">Şifre</label>
+                <input asp-for="Password" type="password" class="form-control" placeholder="Şifre" />
+                <span asp-validation-for="Password" class="text-danger small"></span>
             </div>
 
             <div class="form-group d-grid mb-3">
                 <button type="submit" class="btn btn-success d-block">Giriş Yap</button>
             </div>
-
         </form>
     </div>
 </div>
+
 
