--- a/Hospital/Views/Shared/_Layout.cshtml
+++ b/Hospital/Views/Shared/_Layout.cshtml
@@ -22,9 +22,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                       
 
 
                         <!-- ... Diğer HTML etiketleri ... -->
@@ -42,6 +40,12 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ListUsers">Kullanıcıları Listele</a>
         </li>
+          <li class="nav-item">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="AddAdmin">Admin Ekle</a>
+    </li>
+     <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="ListAdmins">Adminleri Listele</a>
+        </li>
         
       }
 
@@ -51,6 +55,7 @@
        <li class="nav-item">
        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Çıkış Yap</a>
        </li>
+
 
 
 
@@ -85,9 +90,7 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Kayıt Ol</a>
     </li>
 
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="AddAdmin">Admin Ekle</a>
-    </li>
+   
 
     
      }
